RESOLVED FIXED128986
AX: Searching for "immediate descendants only" can return unexpected results.
https://bugs.webkit.org/show_bug.cgi?id=128986
Summary AX: Searching for "immediate descendants only" can return unexpected results.
Samuel White
Reported 2014-02-18 11:37:14 PST
Distant descendant results are occasionally sneaking in. We are missing an application of the immediateDescendantsOnly flag during our DFS.
Attachments
Patch. (5.59 KB, patch)
2014-02-18 11:50 PST, Samuel White
no flags
Updated patch. (5.81 KB, patch)
2014-02-18 13:51 PST, Samuel White
no flags
Radar WebKit Bug Importer
Comment 1 2014-02-18 11:37:52 PST
Radar WebKit Bug Importer
Comment 2 2014-02-18 11:37:53 PST
Samuel White
Comment 3 2014-02-18 11:38:53 PST
We should also update the test to ensure fast search results match traditional children results (when appropriate).
Radar WebKit Bug Importer
Comment 4 2014-02-18 11:39:16 PST
Samuel White
Comment 5 2014-02-18 11:50:08 PST
chris fleizach
Comment 6 2014-02-18 13:23:01 PST
Comment on attachment 224529 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=224529&action=review > Source/WebCore/ChangeLog:8 > + Missed an application of the immediateDescendantsOnly during the initial implementation. what was the application that was missed?
Samuel White
Comment 7 2014-02-18 13:51:59 PST
Created attachment 224542 [details] Updated patch. Updated the commit message to better address your question. Marking for review as the previous patch passed without issue (only ChangeLog changes here). Thanks for looking Chris.
WebKit Commit Bot
Comment 8 2014-02-18 14:34:31 PST
Comment on attachment 224542 [details] Updated patch. Clearing flags on attachment: 224542 Committed r164321: <http://trac.webkit.org/changeset/164321>
WebKit Commit Bot
Comment 9 2014-02-18 14:34:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.