AX: Searching for "immediate descendants only" can return unexpected results. https://bugs.webkit.org/show_bug.cgi?id=128986

Reviewed by Chris Fleizach.

Source/WebCore:

Missed an application of the immediateDescendantsOnly flag during the initial implementation. We
need to make sure we don't decend into the startObject first if it is provided. This fix causes
the outer loop to 'skip' the first iteration so only siblings of the startObject are considered.

No new tests, updated existing search-predicate-immediate-descendants-only.html test to cover this case.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::findMatchingObjects):

LayoutTests:

Updated test and expectations to make sure the results match traditional "children" results when appropriate.

* platform/mac/accessibility/search-predicate-immediate-descendants-only-expected.txt:
* platform/mac/accessibility/search-predicate-immediate-descendants-only.html:


Canonical link: https://commits.webkit.org/147031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164321 268f45cc-cd09-0410-ab3c-d52691b4dbfc